hdmi-in.sdk/.metadata/.plugins/org.eclipse.cdt.ui/HDMI_IN.build.log
16:45:30 **** Build of configuration Debug for project HDMI_IN ****
make pre-build main-build 
a9-linaro-pre-build-step
' '
'Building file: ../src/video_capture/video_capture.c'
'Invoking: ARM v7 gcc compiler'
arm-none-eabi-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/video_capture/video_capture.o" -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -I../../HDMI_IN_bsp/ps7_cortexa9_0/include -MMD -MP -MF"src/video_capture/video_capture.d" -MT"src/video_capture/video_capture.o" -o "src/video_capture/video_capture.o" "../src/video_capture/video_capture.c"
'Finished building: ../src/video_capture/video_capture.c'
' '
'Building file: ../src/timer_ps/timer_ps.c'
'Invoking: ARM v7 gcc compiler'
arm-none-eabi-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/timer_ps/timer_ps.o" -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -I../../HDMI_IN_bsp/ps7_cortexa9_0/include -MMD -MP -MF"src/timer_ps/timer_ps.d" -MT"src/timer_ps/timer_ps.o" -o "src/timer_ps/timer_ps.o" "../src/timer_ps/timer_ps.c"
'Finished building: ../src/timer_ps/timer_ps.c'
' '
'Building file: ../src/intc/intc.c'
'Invoking: ARM v7 gcc compiler'
arm-none-eabi-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/intc/intc.o" -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -I../../HDMI_IN_bsp/ps7_cortexa9_0/include -MMD -MP -MF"src/intc/intc.d" -MT"src/intc/intc.o" -o "src/intc/intc.o" "../src/intc/intc.c"
'Finished building: ../src/intc/intc.c'
' '
'Building file: ../src/dynclk/dynclk.c'
'Invoking: ARM v7 gcc compiler'
arm-none-eabi-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/dynclk/dynclk.o" -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -I../../HDMI_IN_bsp/ps7_cortexa9_0/include -MMD -MP -MF"src/dynclk/dynclk.d" -MT"src/dynclk/dynclk.o" -o "src/dynclk/dynclk.o" "../src/dynclk/dynclk.c"
'Finished building: ../src/dynclk/dynclk.c'
' '
'Building file: ../src/display_ctrl/display_ctrl.c'
'Invoking: ARM v7 gcc compiler'
arm-none-eabi-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/display_ctrl/display_ctrl.o" -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -I../../HDMI_IN_bsp/ps7_cortexa9_0/include -MMD -MP -MF"src/display_ctrl/display_ctrl.d" -MT"src/display_ctrl/display_ctrl.o" -o "src/display_ctrl/display_ctrl.o" "../src/display_ctrl/display_ctrl.c"
'Finished building: ../src/display_ctrl/display_ctrl.c'
' '
'Building file: ../src/video_demo.c'
'Invoking: ARM v7 gcc compiler'
arm-none-eabi-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/video_demo.o" -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -I../../HDMI_IN_bsp/ps7_cortexa9_0/include -MMD -MP -MF"src/video_demo.d" -MT"src/video_demo.o" -o "src/video_demo.o" "../src/video_demo.c"
../src/video_demo.c: In function 'IntcInitFunction':
../src/video_demo.c:66:32: error: 'XPAR_FABRIC_AXI_GPIO_BTN_IP2INTC_IRPT_INTR' undeclared (first use in this function); did you mean 'XPAR_FABRIC_AXI_GPIO_VIDEO_IP2INTC_IRPT_INTR'?
 #define INTC_GPIO_INTERRUPT_ID XPAR_FABRIC_AXI_GPIO_BTN_IP2INTC_IRPT_INTR
                                ^
../src/video_demo.c:66:32: note: in definition of macro 'INTC_GPIO_INTERRUPT_ID'
 #define INTC_GPIO_INTERRUPT_ID XPAR_FABRIC_AXI_GPIO_BTN_IP2INTC_IRPT_INTR
                                ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../src/video_demo.c:66:32: note: each undeclared identifier is reported only once for each function it appears in
 #define INTC_GPIO_INTERRUPT_ID XPAR_FABRIC_AXI_GPIO_BTN_IP2INTC_IRPT_INTR
                                ^
../src/video_demo.c:66:32: note: in definition of macro 'INTC_GPIO_INTERRUPT_ID'
 #define INTC_GPIO_INTERRUPT_ID XPAR_FABRIC_AXI_GPIO_BTN_IP2INTC_IRPT_INTR
                                ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../src/video_demo.c:188:10: warning: unused variable 'trig' [-Wunused-variable]
  u8 pri, trig;
          ^~~~
../src/video_demo.c:188:5: warning: unused variable 'pri' [-Wunused-variable]
  u8 pri, trig;
     ^~~
../src/video_demo.c: In function 'DemoStartGame':
../src/video_demo.c:463:33: warning: passing argument 2 of 'DisplayChangeFrame' makes integer from pointer without a cast [-Wint-conversion]
   DisplayChangeFrame(&dispCtrl, frame);
                                 ^~~~~
In file included from ../src/video_demo.c:30:0:
../src/display_ctrl/display_ctrl.h:103:5: note: expected 'u32 {aka long unsigned int}' but argument is of type 'u8 * {aka unsigned char *}'
 int DisplayChangeFrame(DisplayCtrl *dispPtr, u32 frameIndex);
     ^~~~~~~~~~~~~~~~~~
make: *** [src/subdir.mk:23: src/video_demo.o] Error 1

16:45:33 Build Finished (took 2s.940ms)

